--- a/Documentación_plantillaLatex/bibliografia.bib
+++ b/Documentación_plantillaLatex/bibliografia.bib
@@ -32,3 +32,13 @@
   year={2013},
   school={Universitat Polit{\`e}cnica de Catalunya}
 }
+
+@misc{AR_company, title={Realidad Aumentada}, url={https://ardev.es/realidad-aumentada/}, journal={Augmented and Virtual Reality Company}
+}
+
+@misc{barker_2019, title={Merge Cube pone los hologramas en tu mano}, url={https://www.redbull.com/mx-es/merge-cube-hologramas-de-realidad-aumentada}, journal={Red Bull}, publisher={Red Bull}, author={Barker, Phil}, year={2019}, month={Dec}
+}
+
+@misc{vuforia_supported_versions, url={https://library.vuforia.com/articles/Solution/Vuforia-Supported-Versions}, journal={Vuforia Engine Supported Versions}
+
+}
