--- a/Documentación_plantillaLatex/bibliografia.bib
+++ b/Documentación_plantillaLatex/bibliografia.bib
@@ -42,3 +42,6 @@
 @misc{vuforia_supported_versions, url={https://library.vuforia.com/articles/Solution/Vuforia-Supported-Versions}, journal={Vuforia Engine Supported Versions}
 
 }
+
+@misc{google, title={ARCore overview  |  Google Developers}, url={https://developers.google.com/ar/discover}, journal={Google}, publisher={Google}
+}
