--- a/Documentación_plantillaLatex/bibliografia.bib
+++ b/Documentación_plantillaLatex/bibliografia.bib
@@ -45,3 +45,6 @@
 
 @misc{google, title={ARCore overview  |  Google Developers}, url={https://developers.google.com/ar/discover}, journal={Google}, publisher={Google}
 }
+
+@misc{apple_inc, title={ARKit 3 - Augmented Reality}, url={https://developer.apple.com/augmented-reality/arkit/}, journal={Apple Developer}, author={Apple Inc}
+}
