--- a/Documentación_plantillaLatex/tex/3_Conceptos_teoricos.tex
+++ b/Documentación_plantillaLatex/tex/3_Conceptos_teoricos.tex
@@ -17,22 +17,21 @@ nuevas online, poder la web..
 \subsection{ArCore}
 ArCore \footnote{\url{https://developers.google.com/ar/discover}} es la plataforma de Google de desarrollo de realidad aumentada. Con el uso de diferentes API permite que los dispositivos detecten su entorno, lo comprendan e interactúen con la información.
 
-Para conseguir integrar el contenido virtual en mundo real, ArCore utiliza 3 técnicas fundamentales.
+Para conseguir integrar el contenido virtual en el mundo real, ArCore utiliza tres técnicas fundamentales.
 \begin{itemize}
-	\item Motion Tracking, seguimiento del movimiento en español, permite establecer la posición del móvil en relación con el mundo.
-	\item La compresión ambiental, esta permite detectar la posición y tamaño de las superficies del entorno.
-	\item Estimación de la luz, que permite "estimar" las condiciones de luz del ambiente.
+	\item Motion Tracking (seguimiento del movimiento): permite establecer la posición del móvil en relación con el mundo.
+	\item La compresión ambiental: esta permite detectar la posición y tamaño de las superficies del entorno.
+	\item Estimación de la luz: que permite estimar las condiciones de luz del ambiente.
 \end{itemize}
 
 Su funcionamiento se puede resumir en dos pasos principalmente, rastrear la posición del dispositivo a medida que se mueve y construir su propia comprensión del mundo real.
 
-ArCore utiliza el motion Tracking para identificar los puntos clave, y rastrea cómo esos puntos se mueven. Combinado el movimiento de dichos puntos con  las lecturas de los sensores de inercia del dispositivo, ArCore calcula la posición y orientación del dispositivo mientras se mueve.
-\cite{google}
+ArCore utiliza el motion Tracking para identificar los puntos clave, y rastrea cómo esos puntos se mueven. Combinado el movimiento de dichos puntos con  las lecturas de los sensores de inercia del dispositivo, ArCore calcula la posición y orientación del dispositivo mientras se mueve \cite{google}.
 
-Lamentablemente no es compatible con cualquier dispositivo, en el siguiente enlace se encuentra la lista de los dispositivos compatibles actualmente \url{https://developers.google.com/ar/discover/supported-devices}.
+Lamentablemente no es compatible con cualquier dispositivo. En el siguiente enlace se encuentra la lista de los dispositivos compatibles actualmente \url{https://developers.google.com/ar/discover/supported-devices}.
 
 \subsection{ArKit}
-ARKit \footnote{\url{https://developer.apple.com/augmented-reality/}} es la herramienta de realidad aumentada de Apple para sistemas iOS. ARKit consigue mostrar contenido virtual de forma natural en el mudo real, incluso pudiendo situarlo detrás o delante del usuario con People Occlusion, pudiendo reconocer hasta 3 rostros al mismo tiempo.\cite{apple_inc}
+ARKit \footnote{\url{https://developer.apple.com/augmented-reality/}} es la herramienta de realidad aumentada de Apple para sistemas iOS. ARKit consigue mostrar contenido virtual de forma natural en el mudo real, incluso pudiendo situarlo detrás o delante del usuario con People Occlusion, pudiendo reconocer hasta 3 rostros al mismo tiempo \cite{apple_inc}.
 
 Funciones destacadas que posee Arkit actualmente.
 \begin{itemize}
@@ -48,14 +47,14 @@ Funciones destacadas que posee Arkit actualmente.
 Solo esta disponible para sistemas iOS 11.0 o superior.
 
 
-\subsection{CoSpaces} CoSpaces\footnote{\url{https://cospaces.io/edu/}} es una plataforma de apoyo educativo. Se puede acceder a ella tanto por web como desde la aplicación de móvil. Permite a los profesores crear salas para sus alumnos donde tendrían acceso a los diferentes ejemplos a usar para sus clases. También cuenta con una galería donde los usuarios pueden compartir sus ejemplos.
-\imagen{cospaces2}{Plataforma de desarrollo de CoSpaces}
-Para la creación de proyectos, se puede hacer desde la web mediante un entorno de desarrollo 3D donde puedes añadir paredes, objetos y mas tipos de modelos3D, para tu escenario. Con una licencia gratuita, permite guardar dos proyectos como máximo al mismo tiempo. En los proyectos también es posible codificar eventos, acciones mediante una programación de bloques o scrips, aun que hay que destacar, que la programación por scrips y algunas opciones de la programación de bloques unicamente están disponibles con una licencia premium. Para añadir un modelo3D, que Cospace no ofrezca por defecto, se pueden subir desde un archivo local o desde la búsqueda integrada de CoSpace en Google Poly(biblioteca publica de google de modelos3D).
-CoSpace también cuenta con la opción de diseñar proyectos para el mergecube, aunque este plugin se encuentra disponible para la versión premium.
+\subsection{CoSpaces} CoSpaces\footnote{\url{https://cospaces.io/edu/}} es una plataforma de apoyo educativo. Se puede acceder a ella tanto por web, como desde la aplicación de móvil. Permite a los profesores crear salas para sus alumnos donde tendrían acceso a los diferentes ejemplos a usar para sus clases. También cuenta con una galería donde los usuarios pueden compartir sus ejemplos.
+\imagen{cospaces2}{Plataforma de desarrollo de CoSpaces.}
+Para la creación de proyectos, se puede hacer desde la web mediante un entorno de desarrollo 3D donde puedes añadir paredes, objetos y mas tipos de modelos3D, para tu escenario. Con una licencia gratuita, permite guardar dos proyectos como máximo al mismo tiempo. En los proyectos también es posible codificar eventos, acciones mediante una programación de bloques o scripts, aunque hay que destacar, que la programación por scripts y algunas opciones de la programación de bloques únicamente están disponibles con una licencia premium. Para añadir un modelo 3D, que Cospace no ofrezca por defecto, se pueden subir desde un archivo local o desde la búsqueda integrada de CoSpace en Google Poly(biblioteca publica de google de modelos 3D\footnote{\url{https://poly.google.com/}}).
+CoSpace también cuenta con la opción de diseñar proyectos para el Mergecube, aunque este plugin se encuentra disponible para la versión premium.
 
 ...
 
-\subsection{Metaverse} Metaverse\footnote{\url{https://studio.gometa.io/discover/me}} es otra aplicación enfocada bastante al entorno educativo. En este caso el entorno de desarrollo de los ejemplos es más sencillo. En la propia web, tendremos una estructura similar un modelo de diagrama de flujo. En cada paso se puede añadir un objeto 3D o una imagen que es la que estará flotando cuando estemos usando la realidad aumentada, posteriormente se pueden añadir botones y menús, para que te lleven a otra pantalla que tenga otro objeto asignado. Así, por ejemplo, se pueden hacer ejemplos en los que hace pequeños juegos de preguntas y, dependiendo de las respuestas, te llevan a diferentes pantallas.
+\subsection{Metaverse} Metaverse\footnote{\url{https://studio.gometa.io/discover/me}} es otra aplicación enfocada bastante al entorno educativo. En este caso el entorno de desarrollo de los ejemplos es más sencillo. En la propia web, tendremos una estructura similar un modelo de diagrama de flujo. En cada paso se puede añadir un objeto 3D o una imagen que es la que estará flotando cuando estemos usando la realidad aumentada, posteriormente se pueden añadir botones y menús, para que te lleven a otra pantalla que tenga otro objeto asignado. Así, por ejemplo, se pueden hacer programas en los que se creen pequeños juegos de preguntas y, dependiendo de las respuestas, te llevan a diferentes pantallas.
 También da la posibilidad de importar tus propios modelos e imágenes.
 También incluye la posibilidad de reconocer expresiones faciales para poder usarlo como disparadores.
 También puede usar el Arcore y Arkit para permitir que los objetos puedan asentarse en una posición y poder girar alrededor suyo.
@@ -65,30 +64,29 @@ Esta aplicación se podría considerar que está más enfocada a lo comercial. O
 Ofrece más posibilidades que las anteriores herramientas. Pero también es mas compleja ya que usa su propia aplicación para diseño y programación de ejemplos////REVISARR////.
 Para trabajar con los proyectos tiene su propia aplicación de escritorio, desde donde se pueden crear objetos, mecánicas que quieras incorporar, programar los scripts (javascript) a usar.
 
-Algunos ejemplos que muestra son por ejemplo el reconocimiento de un folleto de publicidad que actúa de disparador y salta un modelo 3D del anuncio interactivo. Otro ejemplo en el que reconociendo una imagen del Sistema Solar consigue que se ejecute un modelo 3D del Sistema Solar. 
+Algunos ejemplos que muestra son, por ejemplo, el reconocimiento de un folleto de publicidad que actúa de disparador y salta un modelo 3D del anuncio interactivo. Otro ejemplo es reconociendo una imagen del Sistema Solar consigue que se ejecute un modelo 3D del Sistema Solar. 
 Otros en los que reconoce la cara (facetracking) y es capaz de poner objetos en AR, por ejemplo, sombreros, gafas, cascos…
 Posee Word tracking, que en resumen es la capacidad de reconocer el entorno para poder colocar objetos de una manera mas realista sobre el terreno, por ejemplo, que de la sensación de que realmente esta sobre la mesa aunque vayamos moviendo el ángulo de la cámara.
 
-\subsection{Kudan} Kudan\footnote{\href{https://www.xlsoft.com/en/products/kudan/?utm_source=google&utm_medium=adwords&utm_campaign=cp01&gclid=Cj0KCQiAvJXxBRCeARIsAMSkAprma7nGzsXVWd9w5H4HSQzNoOkF2eJu8LzAtEXbaDALYPUdfBOOgpEaAoqoEALw_wcB}{kudan}} es un tecnología para percepción artificial, la cual se puede utilizar para la AR/VR , robótica y drones, y los coches.
+\subsection{Kudan} Kudan\footnote{\href{https://www.xlsoft.com/en/products/kudan/index.html}{kudan}} es un tecnología para percepción artificial, la cual se puede utilizar para la AR/VR , robótica y drones, y los coches.
 Usa la tecnología SLAM (Simultaneous Localization and Mapping) para el reconocimiento del escenario, esta tecnología también la usa ArCore por ejemplo.
 Tiene disponible SDK para desarrollar, en iOS, Android, y Unity.
 
 \subsection{Vuforia}
-Vuforia\footnote{https://developer.vuforia.com/} es un kit de desarrollo(SDK) para aplicaciones de AR, para las plataformas de Android, iOS, Windows y HoloLens. Fue creado por Qualcomm Connected Experience en 2010, y en 2015 PTC inc lo compro.\cite{simonetti2013vuforia}
+Vuforia\footnote{\url{https://developer.vuforia.com/}} es un kit de desarrollo( SDK) para aplicaciones de AR, para las plataformas de Android, iOS, Windows y HoloLens. Fue creado por Qualcomm Connected Experience en 2010, y en 2015 PTC inc lo compro \cite{simonetti2013vuforia}.
 
 Vuforia proporciona una API en C++, Java, Objective-C++ y los lenguajes de .NET mediante de Unity.
 
-Vuforia soporta diferentes tipos marcadores, estos pueden ser 2D o 3D, también soporta múltiples marcadores simultáneamente , y reconocimiento del terreno sin marcadores.
+Vuforia soporta diferentes tipos marcadores, estos pueden ser 2D o 3D, también soporta múltiples marcadores simultáneamente, y reconocimiento del terreno sin marcadores.
 \imagen{vuforia01}{Posibles marcadores de Vuforia}
 
-Los marcadores se pueden crear desde la pagina web de developer vuforia, para ello deben escoger que tipo de marcador quieren crear y adjuntarle las imágenes que formaran dicho marcador. La pagina dará una calificación de 5 estrellas según la calidad de la imagen para ser un marcador. Una vez completado, da la opción de descargarlos el un archivo configurable de Unity que incluirá los marcadores en nuestro proyecto.
+Los marcadores se pueden crear desde la pagina web de developer vuforia, para ello deben escoger qué tipo de marcadores se quieren crear y adjuntarle las imágenes que formarán dicho marcador. La página dará una calificación de 5 estrellas según la calidad de la imagen para ser un marcador. Una vez completado, da la opción de descargarlos el un archivo configurable de Unity que incluirá los marcadores en nuestro proyecto.
 
 
 
 Cuenta con una licencia gratuita por defecto, con la limitación de poder tener un máximo de 100 vumarks y 1000 cloud targets.
-Es posible ampliar a 3 tipos de tarifas, básica `por 42 mes, básica +cloud por 92, y la pro en la deben ponerse en contacto con ellos para su registro y uso.
 
-Actualmente Vuforia esta disponible para las versiones:
+Actualmente Vuforia esta disponible para las versiones~\cite{vuforia_supported_versions}.
 \begin{table}[]
 	\begin{tabular}{|l|l|l|l|l|l|}
 		\hline
@@ -100,14 +98,14 @@ Actualmente Vuforia esta disponible para las versiones:
 		\multirow{-5}{*}{Android}  & \multirow{-5}{*}{5.1.1+} & Unity Editor                                   & 2019.2.0+                                  & \multirow{-5}{*}{ArCore 1.10+} & \multirow{-5}{*}{} \\ \hline
 		&                          & \cellcolor[HTML]{EFEFEF}XCode                  & \cellcolor[HTML]{EFEFEF}10.1+              & \multicolumn{2}{l|}{}                               \\ \cline{3-4}
 		\multirow{-2}{*}{iOS}      & \multirow{-2}{*}{11+}    & Unity Editor                                   & 2019.2+                                    & \multicolumn{2}{l|}{\multirow{-2}{*}{ArKit}}        \\ \hline
-		&                          & \cellcolor[HTML]{EFEFEF}Visual Studio          & \cellcolor[HTML]{EFEFEF}2017 versión 15.9+ & \multicolumn{2}{l|}{}                               \\ \cline{3-4}
+		&                          & \cellcolor[HTML]{EFEFEF}Visual Studio          & \cellcolor[HTML]{EFEFEF}2017 v 15.9+ & \multicolumn{2}{l|}{}                               \\ \cline{3-4}
 		&                          & Unity Editor                                   & 2019.2.0+                                  & \multicolumn{2}{l|}{}                               \\ \cline{3-4}
 		\multirow{-3}{*}{Windows}  & \multirow{-3}{*}{10}     & \cellcolor[HTML]{EFEFEF}Unity Editor(Hololens) & \cellcolor[HTML]{EFEFEF}2018.4.11          & \multicolumn{2}{l|}{\multirow{-3}{*}{}}             \\ \hline
 		&                          & Lumin SDK                                      & 0.22.0                                     & \multicolumn{2}{l|}{}                               \\ \cline{3-4}
 		\multirow{-2}{*}{Lumin Os} & \multirow{-2}{*}{10}     & \cellcolor[HTML]{EFEFEF}Lumin OS               & \cellcolor[HTML]{EFEFEF}0.97+              & \multicolumn{2}{l|}{\multirow{-2}{*}{}}             \\ \hline
 	\end{tabular}
 \end{table}
-\cite{vuforia_supported_versions}
+
 
 \subsection{Wikitude}
 
@@ -122,29 +120,29 @@ Es una librería de visión por computación y machine learning, de código abie
 
 
 \subsection{8thWall}
-Entorno de desarrollo, que se caracteriza por que da la posibilidad de ejecutar el proyecto desde el navegador web dándole permiso para usar a la cámara del dispositivo, de forma que no haría falta instalarse ninguna aplicación.
+Entorno de desarrollo, que se caracteriza porque da la posibilidad de ejecutar el proyecto desde el navegador web dándole permiso para usar la cámara del dispositivo, de forma que no haría falta instalarse ninguna aplicación.
 
 
 
 
 \section{Técnicas AR}
 	\subsection{Detección de marcadores}
-	La detección de marcadores, se trata de un técnica de realidad aumentada en el que los sistemas utilizan como referencia espacial para situar elemento que queremos superponer, una figura o imagen concreta, que ha sido especificada previamente. Los marcadores mas comunes y simples son los códigos QR, pues se tratan de imágenes diseñadas para que puedan ser reconocidas fácilmente por las cámaras.
+	La detección de marcadores, se trata de un técnica de realidad aumentada en el que los sistemas utilizan como referencia espacial, para situar elemento que queremos superponer, una figura o imagen concreta, que ha sido especificada previamente. Los marcadores mas comunes y simples son los códigos QR, pues se tratan de imágenes diseñadas para que puedan ser reconocidas fácilmente por las cámaras.
 	\imagen{ejemploMarcadorCasa}{Ejemplo un marcador sencillo  \cite{AR_company}}
 	Con la mejora de las cámaras, también es posible utilizar como marcadores imágenes mas complejas, como por ejemplo un folleto publicitario o la foto de un planeta.
 	También es posible que el marcador se trate de un objeto físico, como por ejemplo una lampara, o un coche.
-	\imagen{ejemploMarcadorTigre}{Ejemplo donde una carta de un tigre es un marcador \cite{AR_company}}
-	Aunque gracias al avance de la calidad de las cámaras y el los software de reconocimiento, es posible utilizar marcadores mas complejos,esto también implicarán que será mas probable que falle, y por consecuencia se desencuandren las imágenes insertadas por AR, que los tiempos de detección sean mas largos.
+	\imagen{ejemploMarcadorTigre}{Ejemplo donde una carta de un tigre es un marcador \cite{AR_company}.}
+	Aunque gracias al avance de la calidad de las cámaras y del software de reconocimiento, es posible utilizar marcadores mas complejos, esto también implicarán que será mas probable que falle, y por consecuencia se desencuandren las imágenes insertadas por AR, que los tiempos de detección sean mas largos.
 	\colorbox{red}{MEJORAR y Completar si es posible}
 	
 	\subsubsection{Mergecube}
-	El mergecube\footnote{\url{https://mergeedu.com/}} se trata de un cubo diseñado por Merge , el cual tiene grabado unos dibujos por sus 6 caras, los dibujos actúan de marcadores. Es posible mover el cubo al mismo tiempo que se usa, de esa manera se consigue una experiencia mas interactiva. Es por eso que el mergecube es ideal para aplicarlo en experiencias educativas.
-	\imagen{mergecube}{Mergecube  \cite{barker_2019}} 
+	El Mergecube\footnote{\url{https://mergeedu.com/}} se trata de un cubo diseñado por Merge , el cual tiene grabado unos dibujos por sus 6 caras, los dibujos actúan de marcadores. Es posible mover el cubo al mismo tiempo que se usa, de esa manera se consigue una experiencia mas interactiva. Es por eso que el mergecube es ideal para aplicarlo en experiencias educativas.
+	\imagen{mergecube}{Mergecube  \cite{barker_2019}.} 
 	\subsection{Detección del entorno}
-	La detección del entorno trata de poder reconocer el entorno que la cámara capta y ser capaz de sin la ayuda de un marcador, poder ubicar los modelos en el escenario.
-	Para esto hay diferentes técnicas, en resumen estas técnicas lo que hacen es detectar los cambios de profundidad de la imagen, y con esos datos evaluar que objetos están mas o menos cerca, cuales son planos, si se trata de un objeto que no tiene profundidad(una pared)...
+	La detección del entorno trata de poder reconocer el entorno que la cámara capta y ser capaz de, sin la ayuda de un marcador, poder ubicar los modelos en el escenario.
+	Para esto hay diferentes técnicas, en resumen estas técnicas lo que hacen es detectar los cambios de profundidad de la imagen, y con esos datos evaluar qué objetos están mas o menos cerca, cuáles son planos, si se trata de un objeto que no tiene profundidad(una pared)...
 	\subsubsection{SLAM}
-	Slam,Simultaneous Localization and Mapping, se trata de una técnica de reconocimiento del entorno que la cámara visualiza, puede reconocer donde hay una superficie plana, donde un pared
+	Simultaneous Localization and Mapping, se trata de una técnica de reconocimiento del entorno que la cámara visualiza, puede reconocer dónde hay una superficie plana, dónde un pared.
 	
 	
 	
