Técnicas detección de marcadores
Mjorado las técnicas de marcadores

--- a/Documentación_plantillaLatex/bibliografia.bib
+++ b/Documentación_plantillaLatex/bibliografia.bib
@@ -43,8 +43,14 @@
 
 }
 
+@misc{vuforia_scanner, url={https://library.vuforia.com/content/vuforia-library/en/articles/Training/Vuforia-Object-Scanner-Users-Guide.html}, journal={Vuforia Object Scanner}
+}
+
 @misc{google, title={ARCore overview  |  Google Developers}, url={https://developers.google.com/ar/discover}, journal={Google}, publisher={Google}
 }
 
 @misc{apple_inc, title={ARKit 3 - Augmented Reality}, url={https://developer.apple.com/augmented-reality/arkit/}, journal={Apple Developer}, author={Apple Inc}
+}
+
+@book{linowes_babilinski_2017, place={Birmingham}, title={Augmented reality for developers build practical augmented reality applications with Unity, ARCore, ARKit, and Vuforia}, publisher={Packt}, author={Linowes, Jonathan and Babilinski, Krystian}, year={2017}
 }
