--- a/Documentación_plantillaLatex/memoria.tex
+++ b/Documentación_plantillaLatex/memoria.tex
@@ -41,6 +41,15 @@
 	\FloatBarrier
 }
 
+\newcommand{\imagenPeque}[2]{
+	\begin{figure}%[!h]
+		\centering
+		\includegraphics[width=0.4\textwidth]{#1}
+		\caption{#2}\label{fig:#1}
+	\end{figure}
+	\FloatBarrier
+}
+
 \newcommand{\imagenflotante}[2]{
 	\begin{figure}%[!h]
 		\centering
@@ -48,7 +57,6 @@
 		\caption{#2}\label{fig:#1}
 	\end{figure}
 }
-
 
 
 % El comando \figura nos permite insertar figuras comodamente, y utilizando
